--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,26 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.117.1/containers/codespaces-linux
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.117.1/containers/javascript-node-12
 {
-	"name": "Codespaces",
+	"name": "Node.js 12",
 	"dockerFile": "Dockerfile",
-	"remoteUser": "codespace",
-	"workspaceMount": "source=${localWorkspaceFolder},target=/home/codespace/workspace,type=bind,consistency=cached",
-	"workspaceFolder": "/home/codespace/workspace",
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+
+	// Set *default* container specific settings.json values on container create.
+	"settings": { 
+		"terminal.integrated.shell.linux": "/bin/bash"
+	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"ms-vsonline.vsonline",
-		"GitHub.vscode-pull-request-github",
-		"MS-vsliveshare.vsliveshare",
+		"dbaeumer.vscode-eslint",
 		"octref.vetur"
 	],
-
-	// Set *default* container specific settings.json values on container create.
-	// "settings": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm install -g @vue/cli"
+	"postCreateCommand": "npm install -g @vue/cli",
+
+	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
+	// "remoteUser": "node"
 }
