Change to Azure Functions devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.117.1/containers/javascript-node-12
 {
-	"name": "Node.js 12",
+	"name": "Azure Static Web Apps",
 	"dockerFile": "Dockerfile",
 
 	// Set *default* container specific settings.json values on container create.
